--- a/templates/lightblue-rdbms-datasource.conf.erb
+++ b/templates/lightblue-rdbms-datasource.conf.erb
@@ -1,14 +1,14 @@
 {
   "datasource" => {
-    "<%= data_source_name %>" => { 
-      "pool-name" => "<%= pool_name %>",
-      "jndi-name" => "<%= jndi_name %>",
-      "connection-url" => "<%= connection_url %>",
-      "driver-name" => "<%= driver_name %>",
-      "user-name" => "<%= user_name %>",
-      "password" => "<%= password %>",
-      "min_conn" => "<%= min_conn %>",
-      "max_conn" => "<%= max_conn %>",
+    "<%= @data_source_name %>" => {
+      "pool-name" => "<%= @pool_name %>",
+      "jndi-name" => "<%= @jndi_name %>",
+      "connection-url" => "<%= @connection_url %>",
+      "driver-name" => "<%= @driver_name %>",
+      "user-name" => "<%= @user_name %>",
+      "password" => "<%= @password %>",
+      "min_conn" => "<%= @min_conn %>",
+      "max_conn" => "<%= @max_conn %>",
     }
   }
 }
