--- a/templates/web-access-log.conf.erb
+++ b/templates/web-access-log.conf.erb
@@ -3,17 +3,17 @@
 		"virtual-server" => {"default-host" =>{
 		"configuration" => {"access-log" => {
 
-                  <% if pattern and pattern != '' %>
-                    "pattern"  => "<%=pattern%>",
+                  <% if @pattern and @pattern != '' %>
+                    "pattern"  => "<%=@pattern%>",
 		  <% end %>
-		  <% if rotate and rotate != '' %>
-                    "rotate"  => <%=rotate%>,
+		  <% if @rotate and @rotate != '' %>
+                    "rotate"  => <%=@rotate%>,
 		  <% end %>
-		  <% if prefix and prefix != '' %>
-                    "prefix"  => "<%=prefix%>",
+		  <% if @prefix and @prefix != '' %>
+                    "prefix"  => "<%=@prefix%>",
 		  <% end %>
-                  <% if resolve_hosts and resolve_hosts != '' %>
-                    "resolve-hosts"  => <%=resolve_hosts%>,
+                  <% if @resolve_hosts and @resolve_hosts != '' %>
+                    "resolve-hosts"  => <%=@resolve_hosts%>,
 		  <% end %>
 		  }}
 		}}
