--- a/templates/lightblue-security-domain-cert.conf.erb
+++ b/templates/lightblue-security-domain-cert.conf.erb
@@ -21,7 +21,7 @@
                   "bindPassword" => "<%= @ldap_password %>",
                   "useSSL" => "<%= @ldap_use_tls %>",
                   "poolSize" => "<%= @ldap_pool_size %>",
-                  "trustStore" => "<%= @truststore_url %>",
+                  "trustStore" => expression "<%= @truststore_url %>",
                   "trustStorePassword" => "<%= @truststore_password %>",
                   "environment" => "<%= @environment %>",
                   "debug" => "<%= @debug %>",
