Add security domain config for allAccessOu

--- a/templates/lightblue-security-domain-cert.conf.erb
+++ b/templates/lightblue-security-domain-cert.conf.erb
@@ -24,6 +24,7 @@
                   "trustStore" => expression "<%= @truststore_url %>",
                   "trustStorePassword" => "<%= @truststore_password %>",
                   "environment" => "<%= @environment %>",
+                  "allAccessOu" => "<%= @all_access_ou %>",
                   "debug" => "<%= @debug %>",
                   "keepAlive" => "<%= @keepAlive %>",
                   "connectionTimeoutMS" => "<%= @connectionTimeoutMS %>",
