Fix ERB syntax in a few places

--- a/templates/properties/config.properties.erb
+++ b/templates/properties/config.properties.erb
@@ -7,7 +7,7 @@ hystrix.command.default.fallback.enabled=false
 # disable the circuit breaker, we deal with the errors
 hystrix.command.default.circuitBreaker.enabled=false
 <% if hystrix_execution_timeout_enabled -%>
-hystrix.command.default.execution.timeout.enabled=<%=hystrix_execution_timeout_enabled%>
+hystrix.command.default.execution.timeout.enabled=<%=@hystrix_execution_timeout_enabled%>
 <% end -%>
 
 hystrix.threadpool.default.coreSize=200
