--- a/templates/properties/ldap-healthcheck-config.json.erb
+++ b/templates/properties/ldap-healthcheck-config.json.erb
@@ -4,7 +4,7 @@
      "server" : "<%=@ldap_server%>",
 <% end -%>
 <% if ldap_port -%>
-     "port" : <%=ldap_port%>,
+     "port" : <%=@ldap_port%>,
 <% end -%>
 <% if defined? @ldap_search_base -%>
      "search_base" : "<%=@ldap_search_base%>",
@@ -16,10 +16,10 @@
      "password" : "<%=@ldap_password%>",
 <% end -%>
 <% if ldap_pool_size -%>
-     "pool_size" : <%=ldap_pool_size%>,
+     "pool_size" : <%=@ldap_pool_size%>,
 <% end -%>
 <% if ldap_use_tls -%>
-     "use_tls" : <%=ldap_use_tls%>,
+     "use_tls" : <%=@ldap_use_tls%>,
 <% end -%>
 <% if defined? @truststore_url -%>
      "truststore" : "<%=@truststore_url%>",
@@ -34,10 +34,10 @@
      "responseTimeoutMS" : "<%=@responseTimeoutMS%>",
 <% end -%>
 <% if debug -%>
-     "debug" : <%=debug%>,
+     "debug" : <%=@debug%>,
 <% end -%>
 <% if keepAlive -%>
-     "keepAlive" : <%=keepAlive%>,
+     "keepAlive" : <%=@keepAlive%>,
 <% end -%>
 <% if defined? @poolMaxConnectionAgeMS -%>
      "poolMaxConnectionAgeMS" : "<%=@poolMaxConnectionAgeMS%>",
