Missed a few more

--- a/templates/properties/ldap-healthcheck-config.json.erb
+++ b/templates/properties/ldap-healthcheck-config.json.erb
@@ -3,7 +3,7 @@
 <% if defined? @ldap_server -%>
      "server" : "<%=@ldap_server%>",
 <% end -%>
-<% if ldap_port -%>
+<% if @ldap_port -%>
      "port" : <%=@ldap_port%>,
 <% end -%>
 <% if defined? @ldap_search_base -%>
@@ -15,10 +15,10 @@
 <% if defined? @ldap_password -%>
      "password" : "<%=@ldap_password%>",
 <% end -%>
-<% if ldap_pool_size -%>
+<% if @ldap_pool_size -%>
      "pool_size" : <%=@ldap_pool_size%>,
 <% end -%>
-<% if ldap_use_tls -%>
+<% if @ldap_use_tls -%>
      "use_tls" : <%=@ldap_use_tls%>,
 <% end -%>
 <% if defined? @truststore_url -%>
@@ -33,10 +33,10 @@
 <% if defined? @responseTimeoutMS -%>
      "responseTimeoutMS" : "<%=@responseTimeoutMS%>",
 <% end -%>
-<% if debug -%>
+<% if @debug -%>
      "debug" : <%=@debug%>,
 <% end -%>
-<% if keepAlive -%>
+<% if @keepAlive -%>
      "keepAlive" : <%=@keepAlive%>,
 <% end -%>
 <% if defined? @poolMaxConnectionAgeMS -%>
