Fix deprecated syntax

--- a/templates/application/migrator/lightblue-migrator-daemon.sh.erb
+++ b/templates/application/migrator/lightblue-migrator-daemon.sh.erb
@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# <%= service_name %>   Wraps the lightblue-migrator self-executing jar so that it can run as a service.
+# <%= @service_name %>   Wraps the lightblue-migrator self-executing jar so that it can run as a service.
 # chkconfig: 345 99 05
 # description: Ensures that the legacy and new datasources are in sync.
 
